--- a/src/routes/Layout/Layout.pcss
+++ b/src/routes/Layout/Layout.pcss
@@ -1,6 +1,9 @@
 .pg-layout {
   color: var(--base);
-  background: var(--back-bg);
+  background-image: url(./custom/assets/images/background.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position-x: right;
   min-height: calc(100vh - 95px);
   padding-right: 0;
   padding-left: 0;
