Fix: change fonts, styles, remove footer (#1171)
* Fix: change main font family

* Fix: change security 2fa styles

* Fix: change market selector field color

* Fix: remove 'powered by' footer

* Fix: change enable 2fa modal

--- a/src/custom/styles/components/WalletItem.pcss
+++ b/src/custom/styles/components/WalletItem.pcss
@@ -20,7 +20,7 @@
     .cr-wallet-item {
       &__amount-locked, &__balance {
         color: var(--header-text) !important;
-        font-family: Noto Sans;
+        font-family: var(--font-family);
         font-size: 12px;
         font-style: normal;
         font-weight: 500;
@@ -31,7 +31,7 @@
       }
 
       &__balance-locked, &__balance-amount  {
-        font-family: Noto Sans;
+        font-family: var(--font-family);
         font-style: normal;
         font-weight: bold !important;
         font-size: 20px !important;
