--- a/src/custom/styles/containers/Order.pcss
+++ b/src/custom/styles/containers/Order.pcss
@@ -10,7 +10,7 @@
           &__total {
             &__label, &__content {
               color: var(--color-white);
-              font-family: Noto Sans;
+              font-family: var(--font-family);
               font-size: 15px;
               font-weight: bold;
             }
@@ -18,7 +18,7 @@
 
           &__available, &__fee {
             color: var(--placeholder-text);
-            font-family: Noto Sans;
+            font-family: var(--font-family);
             font-size: 12px;
             font-style: normal;
             font-weight: 500;
