--- a/src/custom/styles/containers/ProgressLabel.pcss
+++ b/src/custom/styles/containers/ProgressLabel.pcss
@@ -5,7 +5,7 @@
 
   &-progress {
     &-positive, &-negative {
-      font-family: Noto Sans;
+      font-family: var(--font-family);
       font-style: normal;
       font-weight: bold;
       font-size: 14px;
