--- a/src/custom/styles/screens/SignUpScreen.pcss
+++ b/src/custom/styles/screens/SignUpScreen.pcss
@@ -13,7 +13,7 @@
   .cr-sign-up-form {
     &__option {
       &-inner {
-        font-family: Noto Sans;
+        font-family: var(--font-family);
         font-style: normal;
         font-weight: normal;
         font-size: 15px;
