--- a/src/custom/styles/screens/WalletsScreen.pcss
+++ b/src/custom/styles/screens/WalletsScreen.pcss
@@ -8,7 +8,7 @@
   }
 
   .cr-tab {
-    font-family: Noto Sans;
+    font-family: var(--font-family);
     font-weight: bold;
     font-size: 15px !important;
     height: 40px !important;
@@ -35,7 +35,7 @@
 
     &__deep {
       .cr-button {
-        font-family: Noto Sans;
+        font-family: var(--font-family);
         border-radius: 4px;
         font-weight: bold;
         font-size: 15px !important;
