--- a/src/custom/styles/screens/style.pcss
+++ b/src/custom/styles/screens/style.pcss
@@ -5,6 +5,7 @@
 @import "./HistoryTab.pcss";
 @import "./OrdersTabScreen.pcss";
 @import "./ProfileScreen.pcss";
+@import "./ProfileTwoFactorAuthScreen.pcss";
 @import "./SignInScreen.pcss";
 @import "./SignUpScreen.pcss";
 @import "./WalletsScreen.pcss";
