--- a/src/custom/styles/components/SummaryField.pcss
+++ b/src/custom/styles/components/SummaryField.pcss
@@ -1,6 +1,6 @@
 .cr-withdraw__summary-field {
   .cr-summary-field-message {
-    font-family: Noto Sans;
+    font-family: var(--font-family);
     color: var(--color-white);
   }
 
