--- a/src/custom/styles/containers/MarketsList.pcss
+++ b/src/custom/styles/containers/MarketsList.pcss
@@ -5,7 +5,7 @@
   padding-right: 5px;
 
   .cr-table thead th {
-    font-family: Noto Sans;
+    font-family: var(--font-family);
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
@@ -13,7 +13,7 @@
   }
 
   .cr-table tbody td {
-    font-family: Noto Sans;
+    font-family: var(--font-family);
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
