--- a/src/custom/styles/containers/OrderBook.pcss
+++ b/src/custom/styles/containers/OrderBook.pcss
@@ -1,7 +1,7 @@
 .pg-combined-order-book {
   .cr-combined-order-book__market {
     span:first-child {
-      font-family: Noto Sans;
+      font-family: var(--font-family);
       font-size: 20px !important;
       font-style: normal;
       font-weight: bold;
