--- a/src/custom/styles/screens/EmailVerification.pcss
+++ b/src/custom/styles/screens/EmailVerification.pcss
@@ -15,7 +15,7 @@
     .pg-emailverification {
       &-title {
         border-bottom: 1px solid var(--placeholder-text);
-        font-family: Noto Sans;
+        font-family: var(--font-family);
         font-style: normal;
         font-weight: 900;
         font-size: 16px;
@@ -27,7 +27,7 @@
         padding: 0 25px;
 
         &-text {
-          font-family: Noto Sans;
+          font-family: var(--font-family);
           font-style: normal;
           font-weight: normal;
           font-size: 14px;
