--- a/src/index.pcss
+++ b/src/index.pcss
@@ -42,7 +42,7 @@ input[type=text], input[type=button] {
 }
 
 .cr-button {
-  font-family: Noto Sans !important;
+  font-family: var(--font-family) !important;
   font-weight: bold !important;
   font-size: 16px !important;
 }
