Feature: custom order book & open orders panel components (#1178)
* Feature: remove color switcher from NavBar

* Feature: change Trading Screen layout

* Fix: remove small orderbook mode, fix orderbook styles

* Feature: add TabPanel component with OpenOrders

* Feature: add Order History Tab

* Feature: add Trade History and Balances tab

* Fix: set proper item color on Open Orders & Order History

* Feature: add new columns to Trade History tables

* Fix: remove estimatedUnitValue from custom

--- a/src/custom/styles/containers/OrderBook.pcss
+++ b/src/custom/styles/containers/OrderBook.pcss
@@ -8,4 +8,14 @@
       line-height: 30px !important;
     }
   }
+
+  &__price{
+    &-asks {
+      color: var(--color-red);
+    }
+
+    &-bids {
+      color: var(--color-green);
+    }
+  }
 }
