--- a/src/custom/styles/themes/basic.pcss
+++ b/src/custom/styles/themes/basic.pcss
@@ -14,6 +14,7 @@
   --red: #E85E59;
   --selected-item: #648280;
   --gamboge: #E0A300;
+  --yellow: #FFD567;
 
   /* linear-gradients */
   --base-3: var(--placeholder-text);
