--- a/src/styles/themes/basic.pcss
+++ b/src/styles/themes/basic.pcss
@@ -59,4 +59,7 @@
   --estimated-value-background: var(--base-bright);
   --estimated-value-label-text: var(--placeholder-text);
   --estimated-value-label-background: var(--header);
+
+  --loader-base-color: var(--back-bg);
+  --loader-start-color: var(--base);
 }
