--- a/src/styles/themes/light.pcss
+++ b/src/styles/themes/light.pcss
@@ -59,4 +59,7 @@
   --estimated-value-background: var(--main-bg);
   --estimated-value-label-text: var(--white);
   --estimated-value-label-background: var(--button-normal);
+
+  --loader-base-color: var(--back-bg);
+  --loader-start-color: var(--base);
 }
