Feature: add sidebar, cleanup navbar, refactoring

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -30,11 +30,14 @@
 }
 
 * {
-  font-family: Roboto;  
-
+  font-family: Roboto;
 }
 
-input[type=text], input[type=button] {   
+#root {
+  position: relative;
+}
+
+input[type=text], input[type=button] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
