--- a/src/routes/Layout/Layout.pcss
+++ b/src/routes/Layout/Layout.pcss
@@ -8,4 +8,9 @@
   padding-right: 0;
   padding-left: 0;
   overflow-x: hidden;
+  padding-top: calc(var(--gap) * 1.3);
+}
+
+.trading-layout {
+  background: var(--trading-screen-background);
 }
