Feature: update baseapp for peatio-2-3

--- a/src/containers/Order/Order.pcss
+++ b/src/containers/Order/Order.pcss
@@ -428,6 +428,7 @@
         }
 
         &__percentage-buttons {
+          margin-bottom: calc(var(--gap) * 1.34);
           margin-top: calc(var(--gap) * 1);
 
           .cr-percentage-button {
