Feature: add whitelist story
Feature: add whitelist story
Feature: add beneficiaries module
Feature: add whitelist component
Feature: change whitelist styles
Feature: change whitelist response
Feature: change withdrawal payload
Feature: change whitelist behaviour after withdrawal
Feature: add fiat whitelist dropdown
Feature: refactor add address modal, add fiat modal
Feature: add fiat confirmation modal
Feature: change withdrawal confirm modal
Feature: change whitelist styles

--- a/src/custom/styles/themes/basic.pcss
+++ b/src/custom/styles/themes/basic.pcss
@@ -41,6 +41,14 @@
   --wallets-item-bg-hover: rgba(#2f3839, 0.9);
   --wallets-amount-locked: #acafb0;
 
+  --background-whitelist-add: #263434;
+  --background-whitelist-dropdown: #324443;
+
+
+  --whitelist-primary-0-1: #2b3b3b;
+  --whitelist-primary-0-5: rgba(#fff, 0.5);
+  --whitelist-button-disabled: rgba(#11B382, 0.5);
+
   /* KYC */
   --kyc-circle-color: var(--green);
   --kyc-header-border: var(--placeholder-text);
