--- a/src/styles/themes/basic.pcss
+++ b/src/styles/themes/basic.pcss
@@ -60,6 +60,14 @@
   --estimated-value-label-text: var(--placeholder-text);
   --estimated-value-label-background: var(--header);
 
+  --whitelist-primary-0-8: rgba(255, 255, 255, 0.8);
+  --whitelist-primary-0-1: rgba(255, 255, 255, 0.1);
+  --whitelist-primary-0-06: rgba(255, 255, 255, 0.06);
+  --whitelist-primary-0-04: rgba(255, 255, 255, 0.04);
+
+  /* sidebar */
+  --nav-item-hover: #3a4c79;
+
   --loader-base-color: var(--back-bg);
   --loader-start-color: var(--base);
 }
