--- a/src/styles/themes/light.pcss
+++ b/src/styles/themes/light.pcss
@@ -60,6 +60,14 @@
   --estimated-value-label-text: var(--white);
   --estimated-value-label-background: var(--button-normal);
 
+  --whitelist-primary-0-8: rgba(0, 0, 0, 0.8);
+  --whitelist-primary-0-1: rgba(0, 0, 0, 0.1);
+  --whitelist-primary-0-06: rgba(0, 0, 0, 0.06);
+  --whitelist-primary-0-04: rgba(0, 0, 0, 0.04);
+
+  /* sidebar */
+  --nav-item-hover: #f0f0f0;
+
   --loader-base-color: var(--back-bg);
   --loader-start-color: var(--base);
 }
