Feature: add beneficiaries story

--- a/src/components/style.pcss
+++ b/src/components/style.pcss
@@ -17,3 +17,4 @@
 @import "./OrderForm/OrderForm.pcss";
 @import "./WhiteList/WhiteList.pcss";
 @import "./GoogleTranslate/GoogleTranslate.pcss";
+@import "./Beneficiaries/Beneficiaries.pcss";
