--- a/src/styles/themes/light.pcss
+++ b/src/styles/themes/light.pcss
@@ -64,6 +64,10 @@
   --whitelist-primary-0-1: rgba(0, 0, 0, 0.1);
   --whitelist-primary-0-06: rgba(0, 0, 0, 0.06);
   --whitelist-primary-0-04: rgba(0, 0, 0, 0.04);
+  --beneficiaries-primary-0-8: rgba(0, 0, 0, 0.8);
+  --beneficiaries-primary-0-1: rgba(0, 0, 0, 0.1);
+  --beneficiaries-primary-0-06: rgba(0, 0, 0, 0.06);
+  --beneficiaries-primary-0-04: rgba(0, 0, 0, 0.04);
 
   /* sidebar */
   --nav-item-hover: #f0f0f0;
