Feature: add banner, change deposit fiat
Feature: change fiat deposit details
Feature: add alpha testing mode banner

--- a/src/custom/styles/components/style.pcss
+++ b/src/custom/styles/components/style.pcss
@@ -1,4 +1,6 @@
+@import "./CookiesConsent.pcss";
 @import "./CopyableTextField.pcss";
+@import "./DepositFiat.pcss";
 @import "./Header.pcss";
 @import "./OrderForm.pcss";
 @import "./SummaryField.pcss";
