Feature: update testing mode banner text and style

--- a/src/custom/styles/components/CookiesConsent.pcss
+++ b/src/custom/styles/components/CookiesConsent.pcss
@@ -22,7 +22,7 @@
     &__button {
       border: 2px solid transparent !important;
       color: rgb(0, 0, 0);
-      background-color: rgb(241, 214, 0);
+      background-color: #FFD567;
       font-size: 14.4px;
       font-weight: 700;
       padding: 15px 25.92px !important;
