Fix: update banner background color

--- a/src/custom/styles/components/CookiesConsent.pcss
+++ b/src/custom/styles/components/CookiesConsent.pcss
@@ -1,5 +1,5 @@
 .cookieConsent {
-  background-color: rgb(0, 0, 0) !important;
+  background-color: #11B382 !important;
   height: 51px;
 
   .cookie-consent {
