--- a/src/custom/styles/components/CookiesConsent.pcss
+++ b/src/custom/styles/components/CookiesConsent.pcss
@@ -1,33 +1,33 @@
 .cookieConsent {
   background-color: #11B382 !important;
-//  height: 51px;
+  /* height: 51px; */
 
   .cookie-consent {
     &__content {
       padding: 5px;
       opacity: .8;
       font-size: 14px;
-//      margin: 0 !important;
-//      margin-left: 15px !important;
-//
-//      span, a {
-//        color: rgb(255, 255, 255);
-//      }
-//
-//      a {
-//        opacity: .8;
-//        text-decoration: underline;
-//      }
+      /* margin: 0 !important;
+      margin-left: 15px !important;
+
+      span, a {
+        color: rgb(255, 255, 255);
+      }
+
+      a {
+        opacity: .8;
+        text-decoration: underline;
+      } */
     }
 
     &__button {
-//      border: 2px solid transparent !important;
-//      color: rgb(0, 0, 0);
       background-color: #FFD567;
-//      font-size: 14.4px;
-//      font-weight: 700;
-//      padding: 15px 25.92px !important;
-//      margin: 0 !important;
+      /* border: 2px solid transparent !important;
+      color: rgb(0, 0, 0);
+      font-size: 14.4px;
+      font-weight: 700;
+      padding: 15px 25.92px !important;
+      margin: 0 !important; */
     }
   }
 }
