Fix: link color in banner css

--- a/src/custom/styles/components/CookiesConsent.pcss
+++ b/src/custom/styles/components/CookiesConsent.pcss
@@ -8,16 +8,16 @@
       opacity: .8;
       font-size: 14px;
       /* margin: 0 !important;
-      margin-left: 15px !important;
+      margin-left: 15px !important;*/
 
       span, a {
         color: rgb(255, 255, 255);
       }
 
       a {
-        opacity: .8;
+        /* opacity: .8; */
         text-decoration: underline;
-      } */
+      }
     }
 
     &__button {
