Feature: referral tickets page w/ mock data

--- a/src/custom/styles/screens/style.pcss
+++ b/src/custom/styles/screens/style.pcss
@@ -6,6 +6,7 @@
 @import "./OrdersTabScreen.pcss";
 @import "./ProfileScreen.pcss";
 @import "./ProfileTwoFactorAuthScreen.pcss";
+@import "./ReferralTicketsScreen.pcss";
 @import "./SignInScreen.pcss";
 @import "./SignUpScreen.pcss";
 @import "./WalletsScreen.pcss";
