Feature: add referral-comissions page w/ mock data, no redux

--- a/src/custom/styles/screens/style.pcss
+++ b/src/custom/styles/screens/style.pcss
@@ -7,6 +7,7 @@
 @import "./ProfileScreen.pcss";
 @import "./ProfileTwoFactorAuthScreen.pcss";
 @import "./ReferralTicketsScreen.pcss";
+@import "./ReferralComissionScreen.pcss";
 @import "./SignInScreen.pcss";
 @import "./SignUpScreen.pcss";
 @import "./WalletsScreen.pcss";
