--- a/src/components/SignUp/SignUp.pcss
+++ b/src/components/SignUp/SignUp.pcss
@@ -6,6 +6,14 @@
   border-radius: 3px;
   position: relative;
 
+  &__terms-link {
+    font-size: 14px;
+    padding-left: 10px;
+    a {      
+      color: white;
+    }
+  }
+
   &__options-group {
     width: 100%;
     height: 58px;
