--- a/src/routes/Layout/Layout.pcss
+++ b/src/routes/Layout/Layout.pcss
@@ -4,7 +4,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position-x: right;
-  min-height: 100%;
+  min-height: 100vh;
   padding-right: 0;
   padding-left: 0;
   overflow-x: hidden;
