Feature: add /referral page

--- a/src/styles/colors.pcss
+++ b/src/styles/colors.pcss
@@ -83,6 +83,7 @@
   --grid-resizable-border-color: var(--placeholder-text);
   --wallet-trades-item-bg-color: #FA00FF;
   --wallet-trades-item-color: #FA00FF;
+  --referral-gold: #FFD541;
 
   /* orders */
   --orders-execute-color: #b18d4f;
