--- a/src/custom/styles/fonts.pcss
+++ b/src/custom/styles/fonts.pcss
@@ -1,1 +1,3 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+SC:300,400,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500,700&display=swap');
+
