--- a/src/custom/styles/screens/style.pcss
+++ b/src/custom/styles/screens/style.pcss
@@ -6,8 +6,9 @@
 @import "./OrdersTabScreen.pcss";
 @import "./ProfileScreen.pcss";
 @import "./ProfileTwoFactorAuthScreen.pcss";
-@import "./ReferralTicketsScreen.pcss";
 @import "./ReferralComissionScreen.pcss";
+@import "./ReferralScreen.pcss";
+@import "./ReferralTicketsScreen.pcss";
 @import "./SignInScreen.pcss";
 @import "./SignUpScreen.pcss";
 @import "./WalletsScreen.pcss";
