--- a/src/custom/styles/screens/ReferralTicketsScreen.pcss
+++ b/src/custom/styles/screens/ReferralTicketsScreen.pcss
@@ -123,7 +123,7 @@
 
           & td {
 
-            padding: 20px 8px;
+            padding: 0 8px 20px;
 
             &:last-of-type {
 
@@ -368,6 +368,9 @@
       & .right {
         line-height: 58px;
       }
+    }
+    a.active {
+      font-weight: 700;
     }
   }
 
