--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -4,6 +4,9 @@
     justify-content: center;
     margin: 0 auto;
     font-size: 16px;
+    font-family: 'IBM Plex Sans';
+	background: black;
+	color: white;
 
     .pg-referral-screen__container {
         background: var(--transparent);
@@ -26,6 +29,9 @@
         }
         &__checkbox .cr-checkbox__checkitem:after {
             border-color: white;
+        }
+        &__form-content {
+            top: 60px;
         }
         &__group {
             border: 2px solid #475354;
@@ -56,6 +62,7 @@
         }
         &__option_inner{
             text-align: left;
+            font-size: 20px;
         }
         
         &__label {
@@ -67,10 +74,35 @@
         }
     }
 
-    font-family: 'IBM Plex Sans';
-	background: #000;
-	color: #fff;
-
+    .total-tickets-wrapper {
+        box-sizing: border-box;
+        position: relative;
+        .total-tickets {
+            border: 2px solid var(--referral-gold);
+            border-radius: 15px;
+            top: 165px;
+            right: 0;
+            font-weight: 500;
+            position: absolute;
+        }
+        a {
+            color: white;
+            &:visited {
+                color: #f0f0f0;
+            }
+        }
+        .header {
+            font-size: 24px;
+            line-height: 30px;
+            padding: 39px 30px 25px;
+        }
+        .content {
+            font-size: 18px;
+            line-height: 30px;
+            padding: 30px;
+            padding-top: 0;
+        }
+    }
 	.container{
 		width: 1140px;
 		margin: auto;
@@ -448,7 +480,7 @@
         }
     }
     #our-prizes{
-        
+        background: url(./custom/assets/images/referral/chest2.svg) bottom left no-repeat;
         & h2{
             font-size: 48px;
             width: 100%;
@@ -537,9 +569,13 @@
             width: 100%;
             padding: 20px;
             display: flex;
+            justify-content: flex-end;
 
             & .left{
                 flex-grow: 1;
+            }
+            & .center {
+                margin-right: 55px;
             }
         }
 
@@ -547,7 +583,7 @@
             width: 720px;
             flex-direction: column;
             min-height: 560px;
-            background: url(./custom/assets/images/referral/chest2.svg) bottom left no-repeat;
+           
             background-size: 70% auto;
             
             & .prizes-holder{
