Feature: add new links to mobile profile menu

--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -23,6 +23,7 @@
       height: calc(var(--gap) * 4);
       outline: none;
       text-decoration: none;
+      padding: 5px 0;
 
       &:hover, &:active {
         background: var(--transparent);
