--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -170,8 +170,8 @@
         display: flex;
         min-height: calc(100vh - 58px);
         background: #000 url(./custom/assets/images/referral/lamp2.svg) no-repeat;
-        background-position: bottom 180px right 20%;
-        background-size: 45%;
+        background-size: 60% auto;
+        background-position: bottom 80px right 0;
         color: #fff;
         
         & .container{
@@ -503,15 +503,15 @@
                 border-radius: 8px;
                 
                 
-                & > *{
+                /* & > *{ */
                     
-                    &.place{
+                    & .place{
                         font-size: 34px;
                         flex-shrink: 0;
                         width: 240px;
                         line-height: 64px;
                     }
-                }
+                /* } */
                 
                 & .value{
                     font-size: 24px;
