--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -1,4 +1,4 @@
-.pg-referral-comission {
+.pg-referral-commission {
     background: white;
     color: black;
     font-size: 16px;
@@ -54,7 +54,7 @@
         }
 
         &.default{
-            background: green url(./custom/assets/images/referral-comission/arrow-right-white.svg) right 15px center no-repeat;
+            background: green url(./custom/assets/images/referral-commission/arrow-right-white.svg) right 15px center no-repeat;
             color: #fff;
             padding-right: 30px;
 
@@ -116,7 +116,7 @@
         }
     }
 
-    .trading-comission-details{
+    .trading-commission-details{
         width: 100%;
     }
 
@@ -178,7 +178,7 @@
             position: absolute;
             bottom: -50px;
             right: 30vw;
-            background: url(./custom/assets/images/referral-comission/cube.svg) center center no-repeat;
+            background: url(./custom/assets/images/referral-commission/cube.svg) center center no-repeat;
         }
 
         .contexter{
@@ -317,7 +317,7 @@
                 content: '';
                 display: block;
                 position: absolute;
-                background: url(./custom/assets/images/referral-comission/1.svg)  center center no-repeat;
+                background: url(./custom/assets/images/referral-commission/1.svg)  center center no-repeat;
                 width: 110px;
                 height: 110px;
                 left: 18vw;
@@ -328,7 +328,7 @@
                 content: '';
                 display: block;
                 position: absolute;
-                background: url(./custom/assets/images/referral-comission/2.svg) center center no-repeat;
+                background: url(./custom/assets/images/referral-commission/2.svg) center center no-repeat;
                 width: 110px;
                 height: 110px;
                 right: 5vw;
@@ -364,7 +364,7 @@
                 height: 12px;
                 width: 12px;
                 transform: translateX(6px) translateY(2px);
-                background: url(./custom/assets/images/referral-comission/right-arrow.svg) center center no-repeat;
+                background: url(./custom/assets/images/referral-commission/right-arrow.svg) center center no-repeat;
             }
         }
     }
@@ -486,7 +486,7 @@
                             position: absolute;
                             top: 0px;
                             right: -23px;
-                            background: url(./custom/assets/images/referral-comission/right-arrow.svg) center center no-repeat;
+                            background: url(./custom/assets/images/referral-commission/right-arrow.svg) center center no-repeat;
                         }
                     }
                 }
