Fix: Resolves 231. Reset mock data, fix styles

--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -20,9 +20,7 @@
     .cr-sign-up-form {
         background: var(--transparent);
         color: white;
-        &__button-wrapper {
-            position: relative;
-        }
+
         &__button {
             color: black;
             background: var(--referral-gold) !important;
@@ -71,6 +69,12 @@
             font-size: calc(var(--gap) * 2);
             top: calc(var(--gap) * -1.33);
             position: absolute;
+        }
+        &__terms-link {
+            color: var(--referral-gold);
+            a {
+                color: var(--referral-gold);
+            }
         }
     }
 
