Fix: remove shadow from main header /referral. Resolves #245

--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -199,8 +199,7 @@
             & h1{
                 font-size: 50.67px;
                 text-transform: capitalize;
-                color: var(--referral-gold);
-                background: linear-gradient(black 0%, var(--referral-gold) 70%);
+                background: var(--referral-gold);
                 margin: 0;
                 background-clip: text;
                 -webkit-background-clip: text;
