--- a/src/custom/styles/screens/ReferralTicketsScreen.pcss
+++ b/src/custom/styles/screens/ReferralTicketsScreen.pcss
@@ -335,6 +335,11 @@
       h2 {
         border-color: transparent;
       }
+      td {
+        a {
+          color: white;
+        }
+      }
     }
 
 
