Fix: add link to terms & conditions from terms section /referral. Resolves #243

--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -873,7 +873,6 @@
         & h2{
             font-size: 48px;
         }
-        
         & .container{
             
             & .left{
@@ -887,6 +886,9 @@
                 
                 & p{
                     line-height: 24px;
+                    & a {
+                        color: white;
+                    }
                 }
             }
             
