--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -497,6 +497,7 @@
                         border-bottom: 1px solid #ccc;
                         width: 80px;
                         padding-bottom: 10px;
+                        font-weight: bold;
                     }
 
                     &.footer-header{
@@ -562,7 +563,7 @@
 
         .top-holder{
 
-            .top{
+            #top{
 
                 .container.recalculate{
 
