--- a/src/custom/styles/screens/ReferralTicketsScreen.pcss
+++ b/src/custom/styles/screens/ReferralTicketsScreen.pcss
@@ -116,6 +116,7 @@
             border-bottom: 1px solid #ccc;
             width: 80px;
             padding-bottom: 10px;
+            font-weight: bold;
           }
         }
 
@@ -340,6 +341,9 @@
           color: white;
         }
       }
+      td:first-child {
+        width: 30%
+      }
     }
 
 
@@ -531,7 +535,7 @@
 
         .Card {
           width: calc(100vw - 40px) !important;
-          height: 160px;
+          height: 194px;
           margin-bottom: 20px;
         }
       }
