Fix: referral tickets, resolves #261

--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -385,7 +385,7 @@
             
 
             td{
-                padding: 20px 8px;
+                padding: 20px 8px 20px 0;
                 color:  #ccc;
 
                 &:last-of-type{
@@ -408,7 +408,7 @@
                 }
 
                 td{
-                    padding: 20px 8px;
+                    padding: 20px 8px 20px 0;
                     border-top: 1px solid #ccc;
                     border-collapse: collapse;
 
@@ -518,7 +518,7 @@
 
                     td{
             
-                        padding: 0 8px 20px;
+                        padding: 0 8px 20px 0;
             
                         &:last-of-type{
             
