--- a/src/custom/styles/screens/ReferralTicketsScreen.pcss
+++ b/src/custom/styles/screens/ReferralTicketsScreen.pcss
@@ -35,6 +35,10 @@
     }
   }
 
+  .wrap {
+    flex-wrap: wrap;
+  }
+
   table {
     border-spacing: 0;
     margin-left: 30px;
@@ -47,7 +51,7 @@
 
 
       & td {
-        padding: 20px 8px;
+        padding: 20px 8px 20px 0;
         color: #ccc;
 
         &:last-of-type {
@@ -67,7 +71,7 @@
         }
 
         & td {
-          padding: 20px 8px;
+          padding: 20px 8px 20px 0;
           border-top: 1px solid #ccc;
           border-collapse: collapse;
 
@@ -124,7 +128,7 @@
 
           & td {
 
-            padding: 0 8px 20px;
+            padding: 0 8px 20px 0;
 
             &:last-of-type {
 
@@ -501,7 +505,11 @@
 }
 
 @media screen and (max-width: 700px) {
+  
   .pg-referral-tickets {
+    table {
+      margin-left: 0;
+    }
     nav {
 
       .left {
