Fix: display thead, tfoot in referral comission page mobile

--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -674,7 +674,7 @@
             }
 
             thead, tfoot{
-                display: none;
+                //display: none;
             }		
         }
     }
