Feature: Add copyrights into referral page into footer

--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -1349,4 +1349,18 @@
             }
         }
     }
+    &__footer { 
+
+
+
+    }
+    &__footer-copyright {
+        display: flex;
+        max-width: 1140px;
+        margin: 0 auto;
+        justify-content: space-between;        
+        font-size: 11px;
+        padding: 20px 0;
+        border-top: 1px solid #FFFFFF55
+    }
 }
