--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -1350,18 +1350,23 @@
         }
     }
     #footer { 
+            max-width: 1140px;
+            margin: 0 auto;
+            
+
+        & .footer-wrapper {
+            
             display: flex;
             flex-direction: column;
-            max-width: 1440px;
-            margin: 0 auto;
-
-        & .header {
+            & .logo {
+            
             display: flex;
             justify-content: flex-start;
             align-items: center;
             padding: 80px 0
         }
         & .copyright {
+
             display: flex;
             justify-content: space-between; 
             align-items: center;       
@@ -1369,8 +1374,8 @@
             padding: 20px 0;
             border-top: 1px solid #FFFFFF55
         }
-        @media screen and (max-width: 900px) {
-        & .header  {
+        @media screen and (max-width: 700px) {
+        & .logo  {
                flex-direction: column;
                justify-content: center;
                align-items: center;
@@ -1382,6 +1387,23 @@
                text-align: center;
            }
         }
+        @media screen and (max-width: 580px) {
+        & .logo  {
+               flex-direction: column;
+               justify-content: center;
+               align-items: center;
+           }
+            & .copyright {
+               flex-direction: column;
+               justify-content: center;
+               align-items: center;
+               text-align: center;
+           }
+        }
+        }
+
+        
+        
     }
 
 
