Feature: Move licenses info to ts footer

--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -1374,6 +1374,19 @@
             padding: 20px 0;
             border-top: 1px solid #FFFFFF55
         }
+        & .licenses {
+                h5 {
+                    padding-bottom: 10px;
+                    letter-spacing: 0.05em;
+                    font-size: 13px;
+                    color: rgba(255, 255, 255, 0.6);
+                }
+               p {
+                   font-size: 12px;
+                   letter-spacing: 0.05em;
+                   color: rgba(255, 255, 255, 0.4);
+               }
+           }
         @media screen and (max-width: 700px) {
         & .logo  {
                flex-direction: column;
@@ -1386,6 +1399,7 @@
                align-items: center;
                text-align: center;
            }
+           
         }
         @media screen and (max-width: 580px) {
         & .logo  {
