Fix: fixing bugs in #228

--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -621,6 +621,7 @@
                 justify-content: flex-start;
                 & .center {
                     margin-right: 20px;
+                    margin-bottom: 20px;
                 }
             }
         }
@@ -981,6 +982,9 @@
             }
         }
     }
+    .wrap {
+        flex-wrap: wrap;
+    }
     #tickets{
         background: #fff;
         color: #000;
@@ -1217,6 +1221,7 @@
             }
         }
         @media(max-width: 360px) {
+            height: 1020px;
             .container {
                 #jin-block1, #jin-block3 {
                     .jin-ul {
